Add alt text for equation.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                                 <p> A <b>Bézier curve</b> is a type parametric curve, specified by a set of control points.
                                 An n'th order Bézier curve has n+1 control points P, and can be defined as:</p>
 
-                                <p> <img class="inline" src="img/equation_blue.png"></img></p>
+                                <p> <img class="inline" src="img/equation_blue.png" alt="Equation for an n'th order Bézier curve."></img></p>
                                 <p> This means that for each value of t, B(t) is a weighted average of the control points P. As t varies from 0 to 1, the weight of each control point changes, causing B(t) to trace out a smooth curve.</p>
                                 <p> It can also be helpful to think about an (equivalent) recursive  definition for Bézier curves. When we draw a first order Bézier curve, we can think of it as interpolating linearly between two control points, tracing out a straight line:</p>
                                 <p> <img src="img/linear.gif" alt="Animation of a linear Bézier curve."></p>
