Match correct element names between js,html,css

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
                 <div id="content">
                         <div id="bezier">
                                 <h1> Bézier Curves</h1>
-                                <div id="canvas">
-                                        <canvas id="myCanvas" height="500" width="500"> Please use a browser that supports the HTML Canvas element.
+                                <div id="bezierCanvasDiv">
+                                        <canvas id="bezierCanvas" height="500" width="500"> Please use a browser that supports the HTML Canvas element.
                                         </canvas>
                                 </div>
                                 <div id="side">
