--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
         <head>
                 <meta charset="UTF-8">
                 <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
-                <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Raleway" rel="stylesheet">
+                <link href="https://fonts.googleapis.com/css?family=Cherry+Swash|Raleway" rel="stylesheet">
                 <title>Bézier Curves</title>
         </head>
 
-        <body>
+        <body onload="initBezier();initBernstein();drawBezier();drawBernstein()">
                 <div id="content">
                         <div id="bezier">
                                 <h1> Bézier Curves</h1>
-                                <div id="bezierCanvasDiv">
+                                <div id="bezierCanvasDiv" class="canvasDiv">
                                         <canvas id="bezierCanvas" height="500" width="500"> Please use a browser that supports the HTML Canvas element.
                                         </canvas>
                                 </div>
@@ -42,23 +42,80 @@
                                 </div>
                         </div>
                         <div id="divider"><hr></div>
-                        <div id="description">
+                        <div class="text">
+                                <h3>Definition</h3>
+                                <p> A <b>Bézier curve</b> is a type parametric curve, completely specified by a set of control points.
+                                An n-th order Bézier curve has n+1 control points P[0],...,P[n], and can be defined as:</p>
 
-                                <p> A <b>Bézier curve</b> is a type parametric curve, specified by a set of control points.
-                                An n'th order Bézier curve has n+1 control points P, and can be defined as:</p>
+                                <p> <img class="inline" src="img/equation_blue.png" alt="Equation for an n-th order Bézier curve."></img></p>
+                                <p> Simply put, this means that for each value of t, B(t) is a weighted average of the control points P[0],...,P[n]. As we vary t from 0 to 1, the weight of each control point changes, causing B(t) to trace out a curve on the plane.</p>
+                        </div>
+                        <div id="bernstein">
+                                <div class="text">
+                                <h3> Bernstein Polynomials</h3>
+                                <p> The weight of each control point varies continuously as a function of t. The functions that we use to calculate the weights are known as the <b>Bernstein basis polynomials.</b> There are n+1 n-th order Bernstein polynomials, defined as:</p>
+                                <p> <img class="inline" id="eq2" src="img/bernstein_blue.png" alt="Definition of Bernstein polynomials."></img></p>
+                                <p> For example, a quadratic Bézier curve has three control points, P[0], P[1], and P[2]. P[0] has weight b[0,2](t), P[1] has weight b[1,2](t), and P[2] has weight b[2,2](t). </p>
+                                </div>
+                                <div id="canvasPlusSlider">
+                                        <div id="bernsteinCanvasDiv" class="canvasDiv">
+                                                <canvas id="bernsteinCanvas" height="500" width="1000"> Please use a browser that supports the HTML Canvas element.
+                                                </canvas>
+                                        </div>
+                                        <div id="sliderDiv">
+                                                <input type="range" id="tslider" min="0" max="1" step="0.01" value="0" oninput="drawBernstein()">
+                                                <label for="tslider" id="sliderLabel">t=0</label>
+                                                <span id="sliderInstruction">Move the slider to change t.</span>
+                                        </div>
+                                </div>
+                                <div id="bernsteinSide">
+                                        <div id="bernsteinInstruction">Drag the control points to edit the curve.</div>
+                                        <div id="bernsteinControls">
+                                                <div id="bernsteinParameters">
+                                                        <div>
+                                                                <label for="bernsteinOrder">Order:</label>
+                                                                <input class="num" type="number" id="bernsteinOrder" value="3" min="1" max="10" onchange="draw_bernstein()">
+                                                        </div>
+                                                </div>
+                                                <div id="bernsteinOptions">
+                                                        <div>
+                                                                <label for="bernsteinDrawPoints">Draw control points:</label>
+                                                                <input type="checkbox" id="bernsteinDrawPoints" checked onchange="draw_bernstein()">
+                                                        </div>
+                                                        <div>
+                                                                <label for="bernsteinDrawLines">Connect control points:</label>
+                                                                <input type="checkbox" id="bernsteinDrawLines" checked onchange="draw_bernstein()">
+                                                        </div>
+                                                        <div>
+                                                                <label for="bernsteinDrawLabels">Label control points:</label>
+                                                                <input type="checkbox" id="bernsteinDrawLabels" checked onchange="draw_bernstein()">
+                                                        </div>
+                                                </div>
+                                        </div>
+                                </div>
+                        </div>
+                        <div class="text">
+                                <h3>Defining Bézier curves recursively</h3>
 
-                                <p> <img class="inline" src="img/equation_blue.png" alt="Equation for an n'th order Bézier curve."></img></p>
-                                <p> This means that for each value of t, B(t) is a weighted average of the control points P. As t varies from 0 to 1, the weight of each control point changes, causing B(t) to trace out a smooth curve.</p>
-                                <p> It can also be helpful to think about an (equivalent) recursive  definition for Bézier curves. When we draw a first order Bézier curve, we can think of it as interpolating linearly between two control points, tracing out a straight line:</p>
+                                <p> It can also be helpful to think about a recursive  definition for Bézier curves. When we draw a first order Bézier curve, we can think of it as interpolating linearly between two control points, tracing out a straight line:</p>
                                 <p> <img src="img/linear.gif" alt="Animation of a linear Bézier curve."></p>
                                 <p>We can think of a second-order (quadratic) curve as a linear interpolation between two first-order curves:</p>
                                 <p> <img src="img/quadratic.gif" alt="Animation of a quadratic Bézier curve."> </p>
                                 </p>
                                 <p>A third-order (cubic) curve, in turn, interpolates between two second-order curves:</p>
                                 <p> <img src="img/cubic.gif" alt="Animation of a cubic Bézier curve."> </p>
-                                <p>This pattern continues for higher order curves, with a Bézier curve of order n being a linear interpolation between two curves of order n-1. If the n'th order curve has control points P[0]..P[n], the two lower order curves have control points P[0]..P[n-1] and P[1]..P[n], respectively.</p>
+                                <p>This pattern continues for higher order curves, with a Bézier curve of order n being a linear interpolation between two curves of order n-1. If the n'th order curve has control points P[0],...,P[n], the two lower order curves have control points P[0],...,P[n-1] and P[1],...,P[n], respectively.</p>
+                                <h3>Notes</h3>
+                                <p>
+                                <ul>
+                                        <li>A Bézier curve is always contained inside the convex hull of its control points.</li>
+                                        <li>When the first and last control points are the same, the curve forms a closed loop.</li>
+                                        <li>A Bézier curve can never exactly form a circle.</li>
+                                </ul>
+                                </p>
                         </div>
                 </div>
                 <script src="js/bezier.js"></script>
+                <script src="js/bernstein.js"></script>
         </body>
 </html>
