--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
                                                 <div id="parameters">
                                                         <div>
                                                                 <label for="order">Order:</label>
-                                                                <input class="num" type="number" id="order" value="3" min="1" max="10" onchange="draw()">
+                                                                <input class="num" type="number" id="order" value="3" min="1" max="10" onchange="drawBezier()">
                                                         </div>
                                                 </div>
                                                 <div id="options">
                                                         <div>
                                                                 <label for="drawPoints">Draw control points:</label>
-                                                                <input type="checkbox" id="drawPoints" checked onchange="draw()">
+                                                                <input type="checkbox" id="drawPoints" checked onchange="drawBezier()">
                                                         </div>
                                                         <div>
                                                                 <label for="drawLines">Connect control points:</label>
-                                                                <input type="checkbox" id="drawLines" checked onchange="draw()">
+                                                                <input type="checkbox" id="drawLines" checked onchange="drawBezier()">
                                                         </div>
                                                         <div>
                                                                 <label for="drawLabels">Label control points:</label>
-                                                                <input type="checkbox" id="drawLabels" checked onchange="draw()">
+                                                                <input type="checkbox" id="drawLabels" checked onchange="drawBezier()">
                                                         </div>
                                                 </div>
                                         </div>
@@ -74,21 +74,21 @@
                                                 <div id="bernsteinParameters">
                                                         <div>
                                                                 <label for="bernsteinOrder">Order:</label>
-                                                                <input class="num" type="number" id="bernsteinOrder" value="3" min="1" max="10" onchange="draw_bernstein()">
+                                                                <input class="num" type="number" id="bernsteinOrder" value="3" min="1" max="10" onchange="drawCurve()">
                                                         </div>
                                                 </div>
                                                 <div id="bernsteinOptions">
                                                         <div>
                                                                 <label for="bernsteinDrawPoints">Draw control points:</label>
-                                                                <input type="checkbox" id="bernsteinDrawPoints" checked onchange="draw_bernstein()">
+                                                                <input type="checkbox" id="bernsteinDrawPoints" checked onchange="drawCurve()">
                                                         </div>
                                                         <div>
                                                                 <label for="bernsteinDrawLines">Connect control points:</label>
-                                                                <input type="checkbox" id="bernsteinDrawLines" checked onchange="draw_bernstein()">
+                                                                <input type="checkbox" id="bernsteinDrawLines" checked onchange="drawCurve()">
                                                         </div>
                                                         <div>
                                                                 <label for="bernsteinDrawLabels">Label control points:</label>
-                                                                <input type="checkbox" id="bernsteinDrawLabels" checked onchange="draw_bernstein()">
+                                                                <input type="checkbox" id="bernsteinDrawLabels" checked onchange="drawCurve()">
                                                         </div>
                                                 </div>
                                         </div>
