Fix order input for bernstein polynomials

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                                 <div id="bernsteinParameters">
                                                         <div>
                                                                 <label for="bernsteinOrder">Order:</label>
-                                                                <input class="num" type="number" id="bernsteinOrder" value="3" min="1" max="10" onchange="drawCurve()">
+                                                                <input class="num" type="number" id="bernsteinOrder" value="3" min="1" max="10" onchange="drawBernstein()">
                                                         </div>
                                                 </div>
                                                 <div id="bernsteinOptions">
